# f1tenth_autonomous_anonymous

./: README.md
final-project-autonomous-anonymous/: README.md  finalproj.pgm  finalproj.yaml  finalproj2.yaml
final-project-autonomous-anonymous v3/: SUBMISSION.md  finalproj2.pgm
final-project-autonomous-anonymous v3/fp_pkg/: CMakeLists.txt  package.xml
final-race-autonomous-anonymous/: SUBMISSION.md  race3_1.csv  race3_optim.csv  race3_trim.xcf
final-race-autonomous-anonymous v3/: README.md  race3.pgm
final-race-autonomous-anonymous v3/fr_pkg/: CMakeLists.txt  package.xml
final-race-autonomous-anonymous v3/fr_pkg/src/: pure_pursuit_node_opp.cpp  pure_pursuit_node_overtaking.cpp
final-race-autonomous-anonymous v3/raceline_optim/: race3_clean.pgm  race3_v6.csv  (+8 more)
lab-1-intro-to-ros-2-jasonf27-main/: README.md  SUBMISSION.md
lab-2-aeb-jasonf27-main/: README.md  SUBMISSION.md
lab-3-wall-following-autonomous-anonymous-main/: README.md  SUBMISSION.md
lab-4-follow-the-gap-autonomous-anonymous-main/: SUBMISSION.md
lab-5-slam-and-pure-pursuit-autonomous-anonymous-main/: README.md  SUBMISSION.md  despacito.csv  despacito_new.csv  lab5config.rviz  levine_2nd_old.pgm  race3.csv  race3_1.csv  test.csv  test2.csv
lab-6-motion-planning-autonomous-anonymous-main/: README.md  SUBMISSION.md
lab-7-model-predictive-control-autonomous-anonymous-main/: SUBMISSION.md  gym_bridge.rviz  mpc_waypoints.csv
lab-8-vision-lab-autonomous-anonymous-main/: .gitignore  README.md  SUBMISSION.md  camera.py  common.py  data_processing.py  distance.py  f110_yolo_hw_team4.ipynb
(+53 files in other folders)
